test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/test_attr.sw
library;

#[test(should_revert)]
fn ok_1() { }

#[test(should_revert = "112233")]
fn ok_2() { }